--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -17,14 +17,8 @@ header {
   text-align: center;
 }
 nav {
-  width: 90%;
-  padding: 10px;
-  border: 1px solid orange;
-  background: #d3beaf;
-  font-weight: bold;
   list-style: none;
-/*   text-align: center;
- */  margin: 0 auto;
+  margin: 0 auto;
 }
 
 nav li, article li {
