--- a/sass/_normal.scss
+++ b/sass/_normal.scss
@@ -211,8 +211,8 @@ figure {
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  height: 0;
-}
+/*   height: 0;
+ */}
 
 /**
  * Contain overflow in all browsers.
