--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -23,7 +23,7 @@ p {
   width: 80%;
   text-align: ".";
   margin-left: 50px;
-  font-size: .7em;
+  font-size: .9em;
   margin-bottom: 1.3em;
   padding-left: 10px;
 }
@@ -115,7 +115,8 @@ a:after {
 
   a:hover, button:hover {
     color: #fff;
-    background: mediumslateblue;  }
+    background: #114fe0;
+  }
 
 span {
   color: #482ACF;
