--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,6 +7,8 @@ main {
   position: absolute;
   top: 0;
   left: 0;
+/*   background: url('/images/chicago_2048.jpg');
+ */
 }
 section{
   margin: 0 auto;
