--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -2,8 +2,14 @@ html {font-size: 1em;}
 
 body {
   background-color: #c7d1ea;
-/*   font-family: 'Libre Baskerville', serif;
- */  font-weight: 400;
+  background: url('/images/chicago_2048.jpg');
+  height: 600px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  font-family: 'Libre Baskerville', serif;
+  font-weight: 400;
   line-height: 1.45;
   color: #333;
 }
@@ -19,12 +25,11 @@ article {
 
 }
 p {
+  color: white;
   float: left;
   width: 80%;
-  text-align: ".";
   margin-left: 50px;
   font-size: .9em;
-  margin-bottom: 1.3em;
   padding-left: 10px;
 }
 p:after {
