--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -8,7 +8,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   line-height: 1.45;
   color: #333;
@@ -49,8 +49,8 @@ h6 {
 }
 
 h1 {
-  background: white;
-  padding: 10px;
+/*   background: white;
+ */  padding: 10px;
   padding-left: 55px;
   margin-top: 0;
   font-size: 2.441em;
