--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -37,7 +37,7 @@ hr {
   padding: 1.2px;
   width: 54%;
   background: #2d2b2b;
-  top: 100px;
+  top: 300px;
 }
 img {
   transition: 300ms ease all;
@@ -89,7 +89,7 @@ img:hover {
    left: 50%;
    position: relative;
    bottom: 20px;
-   top: 200px;
+   top: 400px;
 }
 .github {
   margin-left: 5px;
@@ -152,40 +152,13 @@ section.module.parallax-1 {
 }
  */
  /*Animations*/
-.slide{
-  left:0;
-}
-
-.slide.ng-enter{
-  transition:5s linear all;
-  position:fixed;
-  z-index:inherit;
-  left:-100%;
-  height:inherit;
-}
-
-.slide.ng-leave{
-  transition:5s linear all;
-  position:fixed;
-  z-index:9999;
-  right:0;
-}
-
-.slide.ng-leave-active{
-  transition:5s linear all;
-  position:fixed;
-  right:-100%;
-  left:100%;
-}
-
-.slide.ng-enter-active{
-  transition:5s linear all;
-  left:0;
-  position:relative;
-}
-
-/* Additional classes */
-.slide.ng-leave-noanimation{
-  right:-100%;
-  left:100%;
-}
+ h1 {
+   -webkit-animation-duration: 3s;
+   -moz-animation-delay: 2s;
+/*    animation-iteration-count: ;
+ */ }
+/*  h2:hover {
+  -webkit-animation-duration: 3s;
+  -moz-animation-delay: 10s;
+   animation-iteration-count: 3;
+} */
