created svg logo

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,9 +119,10 @@ text-align: center;
   color: #af0a0a;
   font-weight: bold;
   text-align: center;
-  border-bottom: 3px solid #114fe0;
+  border: 3px solid #114fe0;
   margin-top: 100px;
-  padding: .005px; }
+  padding-top: 20px;
+  padding-bottom: 14px; }
 
 .href {
   margin-left: 35px;
@@ -272,6 +273,13 @@ h1 {
   -moz-animation-delay: 10s;
    animation-iteration-count: 3;
 } */
+.svg-container {
+  /*   width: 75%;
+ */ }
+
+svg {
+  margin: 0 auto; }
+
 form {
   width: 100%;
   margin-top: 20px; }
