made Hillary logo responsive

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,8 +1,20 @@
-<h2>Hello from home</h2>
-<section ng-repeat="portfolio in portfolios">
-  {{name}}
-  {{url}}
-  {{github}}
-  Description: {{description}}
-
+<!-- <section class="module parallax parallax-1">
+<div class="container">
+    </div>
 </section>
+
+   <section class="module content">
+      <div class="container">
+        <div class="project" ng-repeat="project in projects">
+        <h2 class="animated bounce" >{{project.name}}</h2>
+        <div class="img">
+          <img src="/images/{{project.name}}.png" alt="">
+        </div>
+        <p class="desc">Description: {{project.desc}}</p>
+        <div class="href">
+          <a ng-href="{{project.url}}"><i class="{{project.icon}}"> </i>&nbsp;{{project.name}}</a>
+          <a ng-href="{{project.github}}"><i class="fa fa-github"></i></a>
+        </div>
+        </div>
+      </div>
+  </section> -->
