--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -129,6 +129,7 @@ section.module p {
   margin-bottom: 40px;
   font-size: 16px;
   font-weight: 300;
+  min-height: 161px;
 }
 section.module p:last-child {
   margin-bottom: 0;
