--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -254,7 +254,8 @@ section.module:last-child {
 section.module p {
   margin-bottom: 40px;
   font-size: 16px;
-  font-weight: 300; }
+  font-weight: 300;
+  min-height: 161px; }
 
 section.module p:last-child {
   margin-bottom: 0; }
