changed chiago.png to a png pic

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -373,7 +373,7 @@ html {
 
 body {
   background-color: #c7d1ea;
-  background: url("/images/chicago_2048.jpg");
+  background: url("/images/chicago_2048.png");
   height: 600px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
