--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -2,7 +2,7 @@ html {font-size: 1em;}
 
 body {
   background-color: #c7d1ea;
-  background: url('/images/chicago_2048.jpg');
+  background: url('/images/chicago_2048.png');
   height: 600px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
