--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -197,7 +197,8 @@ img:after {
   left: 50px;
   margin-top: -20px;
   width: 80%;
-  height: 360px;
+  /*height: 360px;*/
+  min-height: 315px;
 }
 .project .img {
     display: block;
@@ -241,18 +242,19 @@ img:after {
     transition: all 0.4s ease-in-out;
 }
 .view-first h2 {
-    transform: translateY(-100px) !important;
+    transform: translateY(-300px);
     opacity: 0;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 .view-first p {
-    transform: translateY(100px);
-    opacity: 0;
-	  transition: all 0.2s linear;
+  transform: translateX(-300px);
+  opacity: 0;
+  transition: all 0.4s linear;
 }
-.view-first a.href{
-    opacity: 0;
-	transition: all 0.2s ease-in-out;
+.view-first .href {
+  transform: translateX(300px);
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
 }
 .view-first:hover img {
 	transform: scale(1);
@@ -263,18 +265,19 @@ img:after {
 }
 .view-first:hover h2,
 .view-first:hover p,
-.view-first:hover a.href {
+.view-first:hover .href {
     opacity: 1;
     transform: translateY(0px);
+    transform: translateX(0px);
 }
 .view-first:hover p {
     transition-delay: 0.1s;
 }
-.view-first:hover a.href {
+.view-first:hover .href {
     transition-delay: 0.2s;
 }
-.view-fifth img {
-	transition: all 0.3s ease-in-out;
+.view-first:hover h2 {
+    transition-delay: 0.2s;
 }
 .text-align {
   padding-right: 20px;
@@ -287,7 +290,9 @@ img:after {
   float: left;
   width: 50%;
   position: relative;
-  padding-bottom: 45px; }
+  padding-bottom: 45px;
+  min-height: 200px;
+}
 
 .project:after {
   content: "";
@@ -955,7 +960,11 @@ th {
     display: none;
   }
 }
-
+@media (Max-width: 1500px) {
+  .project .mask {
+    min-height: 360px;
+  }
+}
 @media(Max-width:1225px){
   .resize {
     width: 60%;
@@ -968,6 +977,12 @@ th {
   }
   .small {
     display: none;
+  }
+  .project {
+    padding-bottom: 155px;
+  }
+  .project .mask {
+    min-height: 260px;
   }
   section.module.parallax {
     height: 0;
@@ -993,16 +1008,27 @@ th {
 
 @media(Max-width:900px) and (min-width:400px){
   .resize { border: none; }
+  .project {
+    width: 100%;
+    min-height: 200px;
+    padding-bottom: 80px;
+    padding-left: 60px;
+  }
+  .project .mask {
+    min-height: 450px;
+    margin-left: 60px;
+    width: 75%;
+  }
   .project h2 {
     font-size: 18px;
   }
 
   .project a {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   section.module p {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   footer .fa {
@@ -1017,11 +1043,12 @@ th {
 @media(Max-width:600px) {
   .project {
     width: 100%;
+    min-height: 200px;
+    padding-bottom: 80px;
   }
   .project h2 {
-    font-size: 18px;
+    font-size: 16px;
   }
-
   section.module p {
     font-size: 12px;
   }
@@ -1039,7 +1066,7 @@ th {
   }
 }
 
-@media(Max-width:500px){
+/*@media(Max-width:500px){
   footer .fa {
     font-size: .7em;
   }
@@ -1055,9 +1082,9 @@ th {
   li {
     font-size: .9em;
   }
-}
+}*/
 
-@media(Max-width:400px){
+/*@media(Max-width:400px){
   .resize {
     width: 100%;
     border: none;
@@ -1077,4 +1104,4 @@ th {
   section.module p {
     font-size: 12px;
   }
-}
+}*/
