--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -1,15 +1,3 @@
-.login {
-  margin-top: 20px;
-  margin-left: 40px;
-  color: white;
-  background: #482ACF;
-  color: white;
-  padding: 10px 25px;
-  border-radius: 10px;
-  border: 1px solid #000;
-/*   transition: 300ms ease all;
- */}
-
 .welcome {
   width: 50%;
   margin: 0 auto;
@@ -21,18 +9,21 @@
   padding-top: 20px;
   padding-bottom: 14px;
 }
-.href {
-  margin-left: 35px;
-  display: block;
-/*   float:left;
-width: 32%;
-text-align: center;
- */}
-.href:after {
-  content: "";
-  display: table;
-  clear: both;
+.ad {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
+.ad text {
+  width: 100%;
+  height: 100%;
+}
+.href {
+  // margin-left: 35px;
+  display: block;
+ }
 hr {
   position: relative;
   color: #2d2b2b;
@@ -43,7 +34,7 @@ hr {
 }
 img {
   transition: 300ms ease all;
-  opacity: .5;
+  // opacity: .5;
   margin-left: 50px;
   width: 80%;
   float: left;
@@ -59,20 +50,122 @@ img:hover {
 .text-align {
   padding-right: 20px;
   text-align: right;
-/*     text-align: ".";
- */}
+}
  .project {
    background: black;
-   opacity: .7;
+  //  opacity: .7;
    float: left;
    width: 50%;
-   padding-bottom: 20px;
+   padding-bottom: 45px;
  }
  .project:after {
    content: "";
    display: table;
    clear: both;
  }
+ .project a.href {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: #000;
+    color: #fff;
+    /*text-transform: uppercase;*/
+    box-shadow: 0 0 1px #000
+}
+.project .mask {
+  position: absolute;
+  overflow: hidden;
+  top: 20px;
+  left: 50px;
+  margin-top: -20px;
+  width: 80%;
+  /*height: 360px;*/
+  min-height: 315px;
+}
+.project .img {
+    display: block;
+    position: relative
+}
+.project h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px 0 0 0
+}
+.project p {
+    font-style: italic;
+    font-size: 12px;
+    position: relative;
+    padding: 0 20px 0 20px;
+    text-align: center;
+    height: 120px;
+    overflow: hidden;
+}
+.project a.href:hover {
+    box-shadow: 0 0 5px #000
+}
+.view-first .img {
+    transition: all 0.2s linear;
+}
+.view-first .mask {
+    opacity: 0;
+    background-color: rgba(245,245,220, 0.9);
+    transition: all 0.4s ease-in-out;
+}
+.view-first h2 {
+    transform: translateY(-300px);
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+}
+.view-first p {
+  transform: translateX(-300px);
+  opacity: 0;
+  transition: all 0.4s linear;
+}
+.view-first .href {
+  transform: translateX(300px);
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+}
+.view-first:hover img {
+	transform: scale(1);
+      width: 80%;
+}
+.view-first:hover .mask {
+	opacity: 1;
+}
+.view-first:hover h2,
+.view-first:hover p,
+.view-first:hover .href {
+    opacity: 1;
+    transform: translateY(0px);
+    transform: translateX(0px);
+}
+.view-first:hover p {
+    transition-delay: 0.1s;
+}
+.view-first:hover .href {
+    transition-delay: 0.2s;
+}
+.view-first:hover h2 {
+    transition-delay: 0.2s;
+}
+/*.mask {
+    flex: 1; /* same as flex: 1 1 auto; */
+    /*
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* align items in Main Axis */
+/*
+    align-items: stretch; /* align items in Cross Axis */
+/*
+    align-content: stretch; /* Extra space in Cross Axis */
+}/*
+*/
  .fa {
    font-size: 1.5em;
    color: #af0a0a;
@@ -97,16 +190,14 @@ img:hover {
   margin-left: 5px;
 }
 .show {
-    color: #114fe0;
-    margin-left: 0;
-  /*   color: #24227F;
-   */  text-decoration: none;
-    transition: 300ms ease all;
-  /*   background: #af0a0a;
-   */}
-   .show a {
-     color: #114fe0;
-   }
+   color: #114fe0;
+   margin-left: 0;
+   text-decoration: none;
+   transition: 300ms ease all;
+}
+.show a {
+  color: #114fe0;
+}
   a:after {
     content: "";
     display: table;
@@ -119,8 +210,7 @@ img:hover {
   font-size: 1.6em;
 }
 .container {
-/*   max-width: 960px;
- */  margin: 0 auto;
+  margin: 0 auto;
 }
 section.module:last-child {
   margin-bottom: 0;
@@ -129,7 +219,6 @@ section.module p {
   margin-bottom: 40px;
   font-size: 16px;
   font-weight: 300;
-  min-height: 161px;
 }
 section.module p:last-child {
   margin-bottom: 0;
@@ -165,9 +254,7 @@ section.module.parallax-1 {
   -moz-animation-delay: 10s;
    animation-iteration-count: 3;
 } */
-.svg-container {
-/*   width: 75%;
- */}
+
 svg {
   margin: 0 auto;
 }
@@ -177,4 +264,7 @@ svg {
 .hold {
   display: block;
   min-height: 500px;
+}
+.black {
+  color: black;
 }
